--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,23 +88,23 @@ add_subdirectory(dependencies/glm)
 add_subdirectory(dependencies/glslang)
 
 # Vulkan学习指南的各个章节
-#add_subdirectory(Basic_chapter_03_HandShake)
-#add_subdirectory(Basic_chapter_04_DebugVulkan)
-#add_subdirectory(Basic_chapter_05_CommandBuffer)
-#add_subdirectory(Basic_chapter_06_SwapChain)
-#add_subdirectory(Basic_chapter_07a_VertexBuffer)
-#add_subdirectory(Basic_chapter_07b_RenderPass)
-#add_subdirectory(Basic_chapter_07c_FrameBuffer)
-#add_subdirectory(Basic_chapter_07d_ClearingBackground)
-#add_subdirectory(Basic_chapter_07e_ShadersWithSPIRV)
-#add_subdirectory(Basic_chapter_08_PipelineStateMgmt)
-#add_subdirectory(Basic_chapter_09a_DrawingHelloWorld)
-#add_subdirectory(Basic_chapter_09b_IndexedDraw)
-#add_subdirectory(Basic_chapter_09c_Resizing)
+add_subdirectory(Basic_chapter_03_HandShake)
+add_subdirectory(Basic_chapter_04_DebugVulkan)
+add_subdirectory(Basic_chapter_05_CommandBuffer)
+add_subdirectory(Basic_chapter_06_SwapChain)
+add_subdirectory(Basic_chapter_07a_VertexBuffer)
+add_subdirectory(Basic_chapter_07b_RenderPass)
+add_subdirectory(Basic_chapter_07c_FrameBuffer)
+add_subdirectory(Basic_chapter_07d_ClearingBackground)
+add_subdirectory(Basic_chapter_07e_ShadersWithSPIRV)
+add_subdirectory(Basic_chapter_08_PipelineStateMgmt)
+add_subdirectory(Basic_chapter_09a_DrawingHelloWorld)
+add_subdirectory(Basic_chapter_09b_IndexedDraw)
+add_subdirectory(Basic_chapter_09c_Resizing)
 add_subdirectory(Basic_chapter_10a_Uniforms_And_Descriptors)
 add_subdirectory(Basic_chapter_10b_PushConstant) # 黑屏
-#add_subdirectory(Basic_chapter_11a_Texture_LinearLayout)
-#add_subdirectory(Basic_chapter_11b_Texture_OptimalLayout)
+add_subdirectory(Basic_chapter_11a_Texture_LinearLayout)
+add_subdirectory(Basic_chapter_11b_Texture_OptimalLayout)
 
 # Vulkan开发实战详解的各个章节
 #add_subdirectory(Chapter01-01)
