补充之前13.2-13.4缺失天空盒贴图，在代码中使用

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,23 +88,23 @@ add_subdirectory(dependencies/glm)
 add_subdirectory(dependencies/glslang)
 
 # Vulkan学习指南的各个章节
-add_subdirectory(Basic_chapter_03_HandShake)
-add_subdirectory(Basic_chapter_04_DebugVulkan)
-add_subdirectory(Basic_chapter_05_CommandBuffer)
-add_subdirectory(Basic_chapter_06_SwapChain)
-add_subdirectory(Basic_chapter_07a_VertexBuffer)
-add_subdirectory(Basic_chapter_07b_RenderPass)
-add_subdirectory(Basic_chapter_07c_FrameBuffer)
-add_subdirectory(Basic_chapter_07d_ClearingBackground)
-add_subdirectory(Basic_chapter_07e_ShadersWithSPIRV)
-add_subdirectory(Basic_chapter_08_PipelineStateMgmt)
-add_subdirectory(Basic_chapter_09a_DrawingHelloWorld)
-add_subdirectory(Basic_chapter_09b_IndexedDraw)
-add_subdirectory(Basic_chapter_09c_Resizing)
-add_subdirectory(Basic_chapter_10a_Uniforms_And_Descriptors)
+#add_subdirectory(Basic_chapter_03_HandShake)
+#add_subdirectory(Basic_chapter_04_DebugVulkan)
+#add_subdirectory(Basic_chapter_05_CommandBuffer)
+#add_subdirectory(Basic_chapter_06_SwapChain)
+#add_subdirectory(Basic_chapter_07a_VertexBuffer)
+#add_subdirectory(Basic_chapter_07b_RenderPass)
+#add_subdirectory(Basic_chapter_07c_FrameBuffer)
+#add_subdirectory(Basic_chapter_07d_ClearingBackground)
+#add_subdirectory(Basic_chapter_07e_ShadersWithSPIRV)
+#add_subdirectory(Basic_chapter_08_PipelineStateMgmt)
+#add_subdirectory(Basic_chapter_09a_DrawingHelloWorld)
+#add_subdirectory(Basic_chapter_09b_IndexedDraw)
+#add_subdirectory(Basic_chapter_09c_Resizing)
+#add_subdirectory(Basic_chapter_10a_Uniforms_And_Descriptors)
 add_subdirectory(Basic_chapter_10b_PushConstant) # 黑屏
-add_subdirectory(Basic_chapter_11a_Texture_LinearLayout)
-add_subdirectory(Basic_chapter_11b_Texture_OptimalLayout)
+#add_subdirectory(Basic_chapter_11a_Texture_LinearLayout)
+#add_subdirectory(Basic_chapter_11b_Texture_OptimalLayout)
 
 # Vulkan开发实战详解的各个章节
 #add_subdirectory(Chapter01-01)
@@ -212,9 +212,9 @@ add_subdirectory(Basic_chapter_11b_Texture_OptimalLayout)
 #add_subdirectory(Chapter12-15)
 
 #add_subdirectory(Chapter13-01)
-#add_subdirectory(Chapter13-02)
-#add_subdirectory(Chapter13-03)
-#add_subdirectory(Chapter13-04)
+add_subdirectory(Chapter13-02)
+add_subdirectory(Chapter13-03)
+add_subdirectory(Chapter13-04)
 #add_subdirectory(Chapter13-05)
 #add_subdirectory(Chapter13-06)
 #add_subdirectory(Chapter13-07)
@@ -247,7 +247,7 @@ add_subdirectory(Basic_chapter_11b_Texture_OptimalLayout)
 #add_subdirectory(Chapter15-08)
 
 #add_subdirectory(Chapter16-01)
-add_subdirectory(Chapter16-02) #未修复
+#add_subdirectory(Chapter16-02) #未修复
 #add_subdirectory(Chapter16-03)
 #add_subdirectory(Chapter16-04)
 #add_subdirectory(Chapter16-05)
@@ -258,7 +258,7 @@ add_subdirectory(Chapter16-02) #未修复
 #add_subdirectory(Chapter17-04)
 #add_subdirectory(Chapter17-05)
 #add_subdirectory(Chapter17-06)
-add_subdirectory(Chapter17-07) #未修复
+#add_subdirectory(Chapter17-07) #未修复
 #add_subdirectory(Chapter17-08)
 #add_subdirectory(Chapter17-09)
 #add_subdirectory(Chapter17-10)
